--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -3,26 +3,26 @@
     <string name="app_name">Frisbee Golf Scores</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_frisbee_golf_scores">FrisbeeGolf Scores</string>
-    <string name="language_english">Englanti</string>
-    <string name="language_finnish">Suomi</string>
-    <string name="language_swedish">Ruotsi</string>
-	<string name="main_btn_settings">Asetukset</string>
-	<string name="main_btn_players">Pelaajat</string>
-	<string name="main_btn_teams">Joukkueet</string>
+    <string name="language_english">English</string>
+    <string name="language_finnish">Finnish</string>
+    <string name="language_swedish">Swedish</string>
+	<string name="main_btn_settings">Settings</string>
+	<string name="main_btn_players">Playes</string>
+	<string name="main_btn_teams">Teams</string>
 	<string name="main_taskbar_caption">FrisbeeGolf Scores</string>
-	<string name="settings_taskbar_caption">Asetukset</string>	
+	<string name="settings_taskbar_caption">Settings</string>	
 	<string name="settings_title_cat1">Language and metrics</string>
 	<string name="settings_title_cat2">Generic settings</string>
 	<string name="settings_title_cat3">Data sources</string>
-	<string name="settings_caption_language">Kielisyys</string>
+	<string name="settings_caption_language">Language</string>
 	<string name="settings_caption_metric">Metrics</string>
-	<string name="settings_caption_generic">Yleiset asetukset</string>
-	<string name="settings_caption_location">Sijainti</string>
+	<string name="settings_caption_generic">Generic settings</string>
+	<string name="settings_caption_location">Location</string>
 	<string name="settings_caption_advance">Auto advance</string>
 	<string name="settings_caption_order">Playing order</string>
 	<string name="settings_caption_htmlsource">Course data source</string>
-	<string name="settings_about">Versio : </string>
-	<string name="settings_language">Ohjelman kieli</string>
+	<string name="settings_about">Version : </string>
+	<string name="settings_language">Program language</string>
 	<string name="settings_metric">Metrics used by program</string>
 	<string name="settings_location">Use GPS for location provider</string>
 	<string name="settings_advance">Auto advance to next round after everyone has finished current round</string>
